Fix some layout issuesin footer

--- a/www/source/styles/styles.scss
+++ b/www/source/styles/styles.scss
@@ -178,7 +178,7 @@ nav {
             background: $contrast;
             border-radius: 3px;
             z-index: 1;
-            transform-origin: 5px 0px;
+            transform-origin: 5px 0;
             transition: transform 0.5s ease-in-out,
                 background-color 0.5s ease-in-out,
                 opacity 0.6s ease;
@@ -444,7 +444,7 @@ main {
 
             @each $c-skill-level in $skill-level-list {
                 #skill-#{$i} {
-                    background-image: linear-gradient(to top, mix(black, $contrast, 60%) #{$c-skill-level}, $background2 #{$c-skill-level} 100%);
+                    background: linear-gradient(to top, mix(black, $contrast, 60%) 0 #{$c-skill-level}, $background2 #{$c-skill-level} 100%);
                 }
 
                 $i: $i+1;
@@ -543,6 +543,10 @@ main {
     h2,
     p {
         margin-bottom: 1em;
+    }
+
+    p:nth-of-type(2) {
+        margin-bottom: 4em;
     }
 
     #copyright {
